# py32csdk-hal-sys

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
csrc/binding_inc/: stdio.h
csrc/compile_inc/: stdio.h
csrc/inc/: extra_functions.h  py32f030_wrapper.h  py32f0xx_hal_conf.h  wrapper.h
csrc/src/: extra_functions.c  py32f030_wrapper.c
scripts/: interrupt.py  wrap-func_like-macros.py
src/: lib.rs
src/prebuild/py32f030/: bindings.rs  device.x  interrupt.rs
