[package]
name = "py32csdk-hal-sys"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
description = "PY32 HAL bindings"
readme = "README.md"
homepage = "https://github.com/decaday/py32csdk-hal-sys"
repository = "https://github.com/decaday/py32csdk-hal-sys"
keywords = ["embedded-hal", "no-std", "py32", "mcu"]
categories = ["no-std"]
exclude = [
    "PY32F0_Drivers/CMSIS/DSP_Lib", "PY32F0_Drivers/Examples",
    "PY32F0_Drivers/PY32F0xx_LL_Driver", "PY32F0_Drivers/PY32F002B_LL_Driver"]



[dependencies]


[build-dependencies]
# https://github.com/rust-lang/rust-bindgen/pull/2369
# bindgen = { git = "https://github.com/rust-lang/rust-bindgen.git", rev = "bcaae59d8e6bb79c40c1785d53a5f8a491a4de11", features = ["experimental"]}
# bindgen = { path = "../test/rust-bindgen/bindgen", features = ["experimental"], optional = true}
bindgen = { version = "0.69", features = ["experimental"], optional = true}
cc = { version = "1.0", optional = true}



[patch.crates-io]
# not work
cmacro = { git = "https://github.com/reitermarkus/cmacro-rs" }

# bindgen = { git = "https://github.com/rust-lang/rust-bindgen.git", rev = "bcaae59d8e6bb79c40c1785d53a5f8a491a4de11", features = ["experimental"]}
# bindgen = { path = "../test/rust-bindgen/bindgen", features = ["experimental"], optional = true}



[features]
default = ["py32f030", "py32xxx6", "recompile"]
recompile = ["regenerate-bindings", "cc"]
regenerate-bindings = ["bindgen"]
py32f030 = []
py32xxx6 = []
py32xxx8 = []
